--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h2>My Name</h2>
         <hr/>
         <p>My name is <i><b>Hayley</b></i>.</p>
-        <p><a href="page2.html">Read next page--></a></p>
+        <p><a href="page2.html">next--></a></p>
     </body>
 </html>
     
